--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
 anyio==4.9.0
 appnope==0.1.4
 argon2-cffi==25.1.0
@@ -13,14 +16,17 @@ certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 comm==0.2.2
+datasets==4.0.0
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+dill==0.3.8
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.18.0
 fqdn==1.5.1
-fsspec==2025.5.1
+frozenlist==1.7.0
+fsspec==2025.3.0
 h11==0.16.0
 hf-xet==1.1.3
 httpcore==1.0.9
@@ -51,6 +57,8 @@ MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mistune==3.1.3
 mpmath==1.3.0
+multidict==6.6.3
+multiprocess==0.70.16
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -69,9 +77,11 @@ pillow==11.2.1
 platformdirs==4.3.8
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
+propcache==0.3.2
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==21.0.0
 pycparser==2.22
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
@@ -113,3 +123,5 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+xxhash==3.5.0
+yarl==1.20.1
