--- a/config/dinov2_last_layer.yaml
+++ b/config/dinov2_last_layer.yaml
@@ -5,7 +5,7 @@ model:
   layer: -1
   batch_size: 32
   device: auto
-  features_base_dir: /home/bzq999/data/compmech/features
+  features_dir: /home/bzq999/data/compmech/features
 
 dataset:
   path: /home/bzq999/data/compmech/mcrae-x-things.hf/
