--- a/config/dinov2.yaml
+++ b/config/dinov2.yaml
@@ -13,7 +13,7 @@ probe:
   n_repeats: 2
   output_dir: results/
   seed: 42
-  specific_attributes: a_bird
+  specific_attribute: ["a_bird"]
 
 
 dataset:
