--- a/config/dinov2.yaml
+++ b/config/dinov2.yaml
@@ -3,7 +3,6 @@ model:
   model_name: dinov2-base
   model_path: /home/bzq999/data/compmech/models/dinov2-base/
   batch_size: 32
-  layers: last
   device: auto
   features_dir: /home/bzq999/data/compmech/features
 
@@ -13,7 +12,7 @@ probe:
   n_repeats: 2
   output_dir: results/
   seed: 42
-  specific_attribute: ["a_bird"]
+  specific_attribute:
 
 
 dataset:
