new independent concepts

--- a/config/dinov2.yaml
+++ b/config/dinov2.yaml
@@ -12,7 +12,7 @@ probe:
   n_repeats: 2
   output_dir: results/
   seed: 42
-  specific_attribute: ["a_bird"]
+  specific_attribute: None
 
 
 dataset:
