--- a/config/dinov2.yaml
+++ b/config/dinov2.yaml
@@ -5,6 +5,8 @@ model:
   batch_size: 32
   device: auto
   features_dir: /home/bzq999/data/compmech/features
+  tower_name:
+  projection:
 
 probe:
   type: logistic
