--- a/config/clip-vit-large-patch14.yaml
+++ b/config/clip-vit-large-patch14.yaml
@@ -5,7 +5,7 @@ model:
   batch_size: 32
   device: auto
   features_dir: /home/bzq999/data/compmech/features
-  layers: ["last"]
+  extract_language: False
   tower_name: vision_model
   projection_name: visual_projection
 
