--- a/config/llava-1.5-7b-hf-vision.yaml
+++ b/config/llava-1.5-7b-hf-vision.yaml
@@ -5,7 +5,7 @@ model:
   batch_size: 32
   device: auto
   features_dir: /home/bzq999/data/compmech/features
-  layers: ["last"]
+  extract_language: False
   tower_name: vision_tower
   projection_name: multi_modal_projector
 
