--- a/config/llava-1.5-7b-hf.yaml
+++ b/config/llava-1.5-7b-hf.yaml
@@ -5,8 +5,9 @@ model:
   batch_size: 32
   device: auto
   features_dir: /home/bzq999/data/compmech/features
-  layers: ["last"]
-  projection_name: multi_modal_projector
+  extract_language: True
+  tower_name:
+  projection_name:
 
 
 probe:
