--- a/config/Qwen2.5-VL-7B-Instruct.yaml
+++ b/config/Qwen2.5-VL-7B-Instruct.yaml
@@ -1,6 +1,6 @@
 model:
   type: qwen2.5
-  model_name: llava-1.5-7b-hf
+  model_name: Qwen2.5-VL-7B-Instruct
   model_path: /home/bzq999/data/compmech/models/Qwen2.5-VL-7B-Instruct/
   batch_size: 16
   device: auto
