--- a/requirements.txt
+++ b/requirements.txt
@@ -1,127 +1,65 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.14
-aiosignal==1.4.0
-anyio==4.9.0
-appnope==0.1.4
-argon2-cffi==25.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.3.0
-babel==2.17.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-comm==0.2.2
-datasets==4.0.0
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-dill==0.3.8
-executing==2.2.0
-fastjsonschema==2.21.1
+accelerate==1.8.1
+anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1710965072196/work
+archspec @ file:///croot/archspec_1709217642129/work
+boltons @ file:///work/perseverance-python-buildout/croot/boltons_1698851177130/work
+Brotli @ file:///croot/brotli-split_1714483155106/work
+certifi @ file:///croot/certifi_1717618050233/work/certifi
+cffi @ file:///croot/cffi_1714483155441/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+conda @ file:///croot/conda_1715635703388/work
+conda-content-trust @ file:///croot/conda-content-trust_1714483159009/work
+conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1706733287605/work/src
+conda-package-handling @ file:///croot/conda-package-handling_1718138267740/work
+conda_package_streaming @ file:///croot/conda-package-streaming_1718136078615/work
+cryptography @ file:///croot/cryptography_1714660666131/work
+distro @ file:///croot/distro_1714488253808/work
 filelock==3.18.0
-fqdn==1.5.1
-frozenlist==1.7.0
-fsspec==2025.3.0
-h11==0.16.0
-hf-xet==1.1.3
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.32.6
-idna==3.10
-ipykernel==6.29.5
-ipython==9.3.0
-ipython_pygments_lexers==1.1.1
-isoduration==20.11.0
-jedi==0.19.2
+frozendict @ file:///croot/frozendict_1713194832637/work
+fsspec==2025.5.1
+hf-xet==1.1.5
+huggingface-hub==0.33.2
+idna @ file:///croot/idna_1714398848350/work
 Jinja2==3.1.6
-joblib==1.5.1
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
+jsonpatch @ file:///croot/jsonpatch_1714483231291/work
+jsonpointer==2.1
+libmambapy @ file:///croot/mamba-split_1714483352891/work/libmambapy
 MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mistune==3.1.3
+menuinst @ file:///croot/menuinst_1718132535249/work
 mpmath==1.3.0
-multidict==6.6.3
-multiprocess==0.70.16
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
 networkx==3.5
-notebook==7.4.3
-notebook_shim==0.2.4
-numpy==2.3.0
-overrides==7.7.0
-packaging==25.0
-pandas==2.3.0
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.2.1
-platformdirs==4.3.8
-prometheus_client==0.22.1
-prompt_toolkit==3.0.51
-propcache==0.3.2
+numpy==2.3.1
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+packaging @ file:///croot/packaging_1710807400464/work
+platformdirs @ file:///work/perseverance-python-buildout/croot/platformdirs_1701732573265/work
+pluggy @ file:///work/perseverance-python-buildout/croot/pluggy_1698805497733/work
 psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==21.0.0
-pycparser==2.22
-Pygments==2.19.1
-python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
-pytz==2025.2
+pycosat @ file:///croot/pycosat_1714510623388/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
 PyYAML==6.0.2
-pyzmq==27.0.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.25.1
+requests @ file:///croot/requests_1716902831423/work
+ruamel.yaml @ file:///work/perseverance-python-buildout/croot/ruamel.yaml_1698863605521/work
 safetensors==0.5.3
-scikit-learn==1.7.1
-scipy==1.16.0
-Send2Trash==1.8.3
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.7
-stack-data==0.6.3
+setuptools==69.5.1
 sympy==1.14.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-tokenizers==0.21.1
 torch==2.7.1
-torchvision==0.22.1
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.52.4
-types-python-dateutil==2.9.0.20250516
-typing_extensions==4.14.0
-tzdata==2025.2
-uri-template==1.3.0
-urllib3==2.4.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-xxhash==3.5.0
-yarl==1.20.1
+tqdm @ file:///croot/tqdm_1716395931952/work
+triton==3.3.1
+truststore @ file:///work/perseverance-python-buildout/croot/truststore_1701735771625/work
+typing_extensions==4.14.1
+urllib3 @ file:///croot/urllib3_1718912636303/work
+wheel==0.43.0
+zstandard @ file:///croot/zstandard_1714677652653/work
