--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,115 @@
-accelerate==1.8.1
-anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1710965072196/work
-archspec @ file:///croot/archspec_1709217642129/work
-boltons @ file:///work/perseverance-python-buildout/croot/boltons_1698851177130/work
-Brotli @ file:///croot/brotli-split_1714483155106/work
-certifi @ file:///croot/certifi_1717618050233/work/certifi
-cffi @ file:///croot/cffi_1714483155441/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-conda @ file:///croot/conda_1715635703388/work
-conda-content-trust @ file:///croot/conda-content-trust_1714483159009/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1706733287605/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1718138267740/work
-conda_package_streaming @ file:///croot/conda-package-streaming_1718136078615/work
-cryptography @ file:///croot/cryptography_1714660666131/work
-distro @ file:///croot/distro_1714488253808/work
+accelerate==1.10.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+appnope==0.1.4
+argon2-cffi==25.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astor==0.8.1
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==25.3.0
+babel==2.17.0
+beautifulsoup4==4.13.4
+blake3==1.0.5
+bleach==6.2.0
+cachetools==6.2.0
+cbor2==5.7.0
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpickle==3.1.1
+comm==0.2.2
+compressed-tensors==0.10.2
+contourpy==1.3.2
+cupy-cuda12x==13.6.0
+cycler==0.12.1
+datasets==4.0.0
+debugpy==1.8.14
+decorator==5.2.1
+defusedxml==0.7.1
+depyf==0.19.0
+dill==0.3.8
+diskcache==5.6.3
+distro==1.9.0
+dnspython==2.7.0
+einops==0.8.1
+email_validator==2.2.0
+executing==2.2.0
+fastapi==0.116.1
+fastapi-cli==0.0.8
+fastapi-cloud-cli==0.1.5
+fastjsonschema==2.21.1
+fastrlock==0.8.3
 filelock==3.18.0
-frozendict @ file:///croot/frozendict_1713194832637/work
-fsspec==2025.5.1
+fonttools==4.59.0
+fqdn==1.5.1
+frozenlist==1.7.0
+fsspec==2025.7.0
+gguf==0.17.1
+gitdb==4.0.12
+GitPython==3.1.44
+h11==0.16.0
 hf-xet==1.1.5
-huggingface-hub==0.33.2
-idna @ file:///croot/idna_1714398848350/work
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.34.3
+idna==3.10
+interegular==0.3.3
+ipdb==0.13.13
+ipykernel==6.29.5
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+isoduration==20.11.0
+jedi==0.19.2
 Jinja2==3.1.6
-jsonpatch @ file:///croot/jsonpatch_1714483231291/work
-jsonpointer==2.1
-libmambapy @ file:///croot/mamba-split_1714483352891/work/libmambapy
+jiter==0.10.0
+joblib==1.5.1
+json5==0.12.0
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_server==2.16.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.3
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+kiwisolver==1.4.8
+lark==1.2.2
+llguidance==0.7.30
+llvmlite==0.44.0
+lm-format-enforcer==0.10.12
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
-menuinst @ file:///croot/menuinst_1718132535249/work
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistral_common==1.8.4
+mistune==3.1.3
 mpmath==1.3.0
+msgpack==1.1.1
+msgspec==0.19.0
+multidict==6.6.3
+multiprocess==0.70.16
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.5
-numpy==2.3.1
+ninja==1.13.0
+notebook==7.4.3
+notebook_shim==0.2.4
+numba==0.61.2
+numpy==2.2.6
 nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu12==12.6.80
 nvidia-cuda-nvrtc-cu12==12.6.77
@@ -42,24 +124,107 @@ nvidia-cusparselt-cu12==0.6.3
 nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
-packaging @ file:///croot/packaging_1710807400464/work
-platformdirs @ file:///work/perseverance-python-buildout/croot/platformdirs_1701732573265/work
-pluggy @ file:///work/perseverance-python-buildout/croot/pluggy_1698805497733/work
+nvidia-pyindex==1.0.9
+openai==1.101.0
+openai-harmony==0.0.4
+opencv-python-headless==4.12.0.88
+outlines_core==0.2.10
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.0
+pandocfilters==1.5.1
+parso==0.8.4
+partial-json-parser==0.2.1.1.post6
+pexpect==4.9.0
+pillow==11.3.0
+pip==25.1
+platformdirs==4.3.8
+prometheus_client==0.22.1
+prometheus-fastapi-instrumentator==7.1.0
+prompt_toolkit==3.0.51
+propcache==0.3.2
+protobuf==6.31.1
 psutil==7.0.0
-pycosat @ file:///croot/pycosat_1714510623388/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pyarrow==21.0.0
+pybase64==1.4.2
+pycountry==24.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydantic-extra-types==2.10.5
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-json-logger==3.3.0
+python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
-requests @ file:///croot/requests_1716902831423/work
-ruamel.yaml @ file:///work/perseverance-python-buildout/croot/ruamel.yaml_1698863605521/work
+pyzmq==27.0.0
+ray==2.48.0
+referencing==0.36.2
+regex==2025.7.34
+requests==2.32.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==14.1.0
+rich-toolkit==0.15.0
+rignore==0.6.4
+rpds-py==0.25.1
 safetensors==0.5.3
-setuptools==69.5.1
+scikit-learn==1.7.1
+scipy==1.16.0
+seaborn==0.13.2
+Send2Trash==1.8.3
+sentencepiece==0.2.1
+sentry-sdk==2.33.1
+setproctitle==1.3.6
+setuptools==78.1.1
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soundfile==0.13.1
+soupsieve==2.7
+soxr==0.5.0.post1
+stack-data==0.6.3
+starlette==0.47.3
 sympy==1.14.0
+terminado==0.18.1
+threadpoolctl==3.6.0
+tiktoken==0.11.0
+tinycss2==1.4.0
+tokenizers==0.21.4
 torch==2.7.1
-tqdm @ file:///croot/tqdm_1716395931952/work
+torchaudio==2.7.1
+torchvision==0.22.1
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.55.0
 triton==3.3.1
-truststore @ file:///work/perseverance-python-buildout/croot/truststore_1701735771625/work
+typer==0.16.1
+types-python-dateutil==2.9.0.20250516
 typing_extensions==4.14.1
-urllib3 @ file:///croot/urllib3_1718912636303/work
-wheel==0.43.0
-zstandard @ file:///croot/zstandard_1714677652653/work
+typing-inspection==0.4.1
+tzdata==2025.2
+uri-template==1.3.0
+urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+vllm==0.10.1.1
+wandb==0.21.0
+watchfiles==1.1.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+wheel==0.45.1
+xformers==0.0.31
+xgrammar==0.1.21
+xxhash==3.5.0
+yarl==1.20.1
