--- a/config/Qwen2.5-VL-7B-Instruct.yaml
+++ b/config/Qwen2.5-VL-7B-Instruct.yaml
@@ -1,10 +1,10 @@
 model:
   type: qwen2.5
   model_name: Qwen2.5-VL-7B-Instruct
-  model_path: /home/bzq999/data/compmech/models/Qwen2.5-VL-7B-Instruct/
+  model_path: /leonardo_work/EUHPC_D27_102/compmech/models/Qwen2.5-VL-7B-Instruct/
   batch_size: 16
   device: auto
-  features_dir: /home/bzq999/data/compmech/features
+  features_dir: /leonardo_work/EUHPC_D27_102/compmech/features
   extract_language: True
   tower_name:
   projection_name:
@@ -19,4 +19,4 @@ probe:
   specific_attribute:
 
 dataset:
-  path: /home/bzq999/data/compmech/mcrae-x-things.hf/
+  path: /leonardo_work/EUHPC_D27_102/compmech/mcrae-x-things-tiny.hf
