--- a/config/Qwen2.5-VL-7B-Instruct.yaml
+++ b/config/Qwen2.5-VL-7B-Instruct.yaml
@@ -1,5 +1,5 @@
 model:
-  type: qwen2.5
+  type: qwen2.5-vl
   model_name: Qwen2.5-VL-7B-Instruct
   model_path: /leonardo_work/EUHPC_D27_102/compmech/models/Qwen2.5-VL-7B-Instruct/
   batch_size: 16
@@ -16,7 +16,7 @@ probe:
   n_repeats: 2
   output_dir: results/
   seed: 42
-  specific_attribute:
+  specific_attribute: ['a_bird', 'an_animal', 'has_legs']
 
 dataset:
   path: /leonardo_work/EUHPC_D27_102/compmech/mcrae-x-things-tiny.hf
