--- a/config/Qwen2.5-VL-7B-Instruct.yaml
+++ b/config/Qwen2.5-VL-7B-Instruct.yaml
@@ -5,7 +5,7 @@ model:
   batch_size: 16
   device: auto
   features_dir: /leonardo_work/EUHPC_D27_102/compmech/features
-  extract_language: True
+  extract_language: False
   tower_name:
   projection_name:
 
