--- a/config/Qwen2.5-VL-7B-Instruct.yaml
+++ b/config/Qwen2.5-VL-7B-Instruct.yaml
@@ -2,10 +2,10 @@ model:
   type: qwen2.5-vl
   model_name: Qwen2.5-VL-7B-Instruct
   model_path: /leonardo_scratch/fast/EUHPC_D27_102/models/Qwen2.5-VL-7B-Instruct/
-  batch_size: 16
+  batch_size: 64
   device: auto
   features_dir: /leonardo_work/EUHPC_D27_102/compmech/features
-  extract_language: False
+  extract_language: True
   tower_name:
   projection_name:
 
