--- a/config/Qwen2.5-VL-7B-Instruct.yaml
+++ b/config/Qwen2.5-VL-7B-Instruct.yaml
@@ -2,10 +2,11 @@ model:
   type: qwen2.5-vl
   model_name: Qwen2.5-VL-7B-Instruct
   model_path: /leonardo_scratch/fast/EUHPC_D27_102/models/Qwen2.5-VL-7B-Instruct/
-  batch_size: 64
+  batch_size: 16
   device: auto
   features_dir: /leonardo_work/EUHPC_D27_102/compmech/features
-  extract_language: True
+  extract_vision: True
+  extract_language: False
   tower_name:
   projection_name:
 
@@ -16,7 +17,7 @@ probe:
   n_repeats: 2
   output_dir: results/
   seed: 42
-  specific_attribute: ['a_bird', 'an_animal', 'has_legs']
+  specific_attribute: ['a_bird', 'a_food', 'an_animal', 'has_legs', 'a_vehicle', 'beh_-_flies']
 
 dataset:
   path: /leonardo_work/EUHPC_D27_102/compmech/mcrae-x-things-tiny.hf
