testing new data

--- a/config/Qwen2.5-VL-3B-Instruct.yaml
+++ b/config/Qwen2.5-VL-3B-Instruct.yaml
@@ -5,8 +5,8 @@ model:
   batch_size: 16
   device: auto
   features_dir: /leonardo_work/EUHPC_D27_102/compmech/features
-  extract_vision: False
-  extract_language: True
+  extract_vision: True
+  extract_language: False
   tower_name:
   projection_name:
 
